Add option to show history. Add GPL notices.

--- a/TfsCli.ini
+++ b/TfsCli.ini
@@ -5,12 +5,14 @@ MYPROJECT
 -----  Acceptance Criteria  ---------------------------------------------------------------------------------------------------------------------------------------------------------------------
 -----  Tasks  -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 -----  Links  -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+-----  History  ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 500
 White
 Green
 Yellow
 Cyan
 Magenta
+Gray
 
 
 
@@ -28,6 +30,7 @@ Note. The first thirteen rows are the only ones which count here. They are:
 11. Acceptance Criteria text colour
 12. Tasks text colour
 13. Links text colour
+14. History text colour
 
 
 Available colours:
