--- a/packages.config
+++ b/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
-  <package id="Microsoft.TeamFoundation.WorkItemTracking.Client" version="11.0.50727.2" targetFramework="net452" />
-  <package id="nuget-bot.Microsoft.TeamFoundation.Client" version="12.0.21005.3" targetFramework="net452" />
-  <package id="nuget-bot.Microsoft.TeamFoundation.Common" version="12.0.30501.1" targetFramework="net452" />
-  <package id="nuget-bot.Microsoft.TeamFoundation.Diff" version="12.0.30501.1" targetFramework="net452" />
-  <package id="nuget-bot.Microsoft.TeamFoundation.WorkItemTracking.Client.QueryLanguage" version="12.0.31101.0" targetFramework="net452" />
-  <package id="nuget-bot.Microsoft.TeamFoundation.WorkItemTracking.Common" version="12.0.31101.0" targetFramework="net452" />
-  <package id="nuget-bot.Microsoft.TeamFoundation.WorkItemTracking.Proxy" version="12.0.31101.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.16.204221202" targetFramework="net452" />
+  <package id="Microsoft.TeamFoundationServer.Client" version="14.102.0" targetFramework="net452" />
+  <package id="Microsoft.TeamFoundationServer.ExtendedClient" version="14.102.0" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Services.Client" version="14.102.0" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Services.InteractiveClient" version="14.102.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="nuget-bot.Microsoft.VisualStudio.Services.Client" version="12.0.21005.1" targetFramework="net452" />
   <package id="nuget-bot.Microsoft.VisualStudio.Services.Common" version="12.0.21005.1" targetFramework="net452" />
   <package id="nuget-bot.Microsoft.VisualStudio.Services.WebApi" version="12.0.21005.1" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="WindowsAzure.ServiceBus" version="2.5.1.0" targetFramework="net452" />
 </packages>
